<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarServices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/background_toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:cardElevation="0dp"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/imageViewBackgroundToolbar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/img_background_toolbar"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?actionBarSize"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="49dp"
                android:paddingEnd="49dp"
                android:paddingBottom="44dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo_small" />

                <TextView
                    style="@style/BaseTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margins"
                    android:gravity="center"
                    android:text="@string/description_toolbar" />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:title="@string/services_title"
                app:titleTextAppearance="@style/BaseTextViewStyle.Title" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margins">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    style="@style/BaseTextViewStyle.ToolbarTitle"
                    android:id="@+id/textViewTitleScroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margins"
                    android:text="@string/title_scroll"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/BaseTextViewStyle.ToolbarTitle.All"
                    android:id="@+id/textViewButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margins"
                    android:text="@string/all"
                    android:background="?selectableItemBackgroundBorderless"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPartnership"
                style="@style/BaseTextViewStyle.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="0dp"
                android:backgroundTint="@color/grey"
                android:drawableLeft="@drawable/ic_partnership"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="@dimen/default_margins"
                android:paddingEnd="@dimen/default_margins"
                android:text="@string/offer_service"
                android:layout_marginTop="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleViewItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_anchor="@+id/recycleViewItems"
                app:layout_anchorGravity="center"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                tools:listitem="@layout/item_card" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>